   * Fixed compilation with -D_GLIBCXX_PARALLEL
   * Fixed handling of floating-point WML constants on localized Windows
     (impacts "submerge" animations and AI settings)
 * Graphics:
   * The ~RC() image functor does not accept the special palette switch
     ~RC(palette1=palette2) syntax anymore. ~PAL(palette1>palette2) should
     be used instead
   * New portrait for Orc Grunt, Dwarf Fighter (alternative), Goblin Spearman
     Ogre/Young Ogre, Trapper
 * Language and i18n:
   * new translations: Icelandic
   * updated translations: British English, Catalan, Chinese (Simplified),
      German, Finnish, Hebrew, Italian, Russian, Slovak, Turkish
   * Updated CJK character range
   * Fixed word wrapping in CJK languages (patch #1140 from sylecn)
 * AI:
   * Fixed incorrect handling of poisoning attacks when suggesting best attack
     in user interface
 * FormulaAI:
   * Fixed bug #13230: added debug_float FormulaAI function to allow debugging
     via floating popups on the specified hex
   * Added run_file FormulaAI function to allow running .fai scripts directly
     from in-game console
 * User interface:
   * Fixed bug #13257: Attack dialog always uses the active name of a weapon
     special
 * WML Engine:
   * Added [show_objectives] tag (part of bug #13042)
   * Made moveto events set $x2,$y2 to the source hex. (bug #13140)
   * [switch] and [case]/[else] can be used to wrap story [part]s in [story]
     now (bug #13170)
   * Added support for Lua scripts in WML event actions ([lua] tag)

Version 1.6a:
 * User interface:
   * Remove a no longer valid assert (bug #13217)
   * Make sure the dialog always uses the full map area width
 * Multiplayer and AI:
   * Fixed bug #13222: Do not use the FormulaAI by default since it could lead
     to the AI doing nothing
   * Fixed bug #13218: infinite loop in the AI if it persistently tries to move
     unit to occupied square
   * Moved FormulaAI related debug output into the info log level

Version 1.6: